<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_dashboard">

    <fragment
        android:id="@+id/nav_dashboard"
        android:name="com.apollo.epos.fragment.dashboard.DashboardFragment"
        android:label="@string/menu_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.apollo.epos.fragment.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_new_order" />

    <fragment
        android:id="@+id/nav_change_password"
        android:name="com.apollo.epos.fragment.changepassword.ChangePasswordFragment"
        android:label="@string/menu_change_password"
        tools:layout="@layout/fragment_my_orders" />

    <fragment
        android:id="@+id/nav_notifications"
        android:name="com.apollo.epos.fragment.help.HelpFragment"
        android:label="@string/menu_notifications"
        tools:layout="@layout/fragment_help" />

    <fragment
        android:id="@+id/nav_orders"
        android:name="com.apollo.epos.fragment.notifications.NotificationsFragment"
        android:label="@string/menu_my_orders"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/nav_faqs"
        android:name="com.apollo.epos.fragment.changepassword.ChangePasswordFragment"
        android:label="@string/menu_help"
        tools:layout="@layout/fragment_change_password" />
</navigation>