<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_background"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/twenty_dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_warning" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fifteen_dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/label_this_order_is_cancelled"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/text_dimen_16" />

        <TextView
            android:id="@+id/dialog_button_ok"
            android:layout_width="@dimen/fifty_dp"
            android:layout_height="@dimen/thirty_dp"
            android:layout_marginTop="@dimen/fifteen_dp"
            android:background="#85b8e9"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center"
            android:text="@string/ok"
            android:textAllCaps="true"
            android:textColor="@color/white" />
    </LinearLayout>
</layout>