<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/dashboard_pending_text_color"
    android:orientation="vertical"
    android:padding="@dimen/five_dp"
    app:behavior_hideable="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/sheet_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginBottom="@dimen/ten_dp"
            android:text="@string/label_reject_order"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_dimen_18"
            android:fontFamily="@font/roboto_bold"/>

        <ImageView
            android:id="@+id/close_icon"
            android:layout_width="@dimen/thirty_five_dp"
            android:layout_height="@dimen/thirty_five_dp"
            android:padding="@dimen/five_dp"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/app_name"
            android:src="@drawable/icon_close"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/cancel_order_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/five_dp"
        android:layout_marginBottom="@dimen/ten_dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/label_reject_reason_header"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/text_dimen_12"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/forty_dp"
        android:layout_marginTop="@dimen/ten_dp"
        android:background="@color/colorWhite">

        <Spinner
            android:id="@+id/rejectReasonSpinner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/roboto_regular"
            style="@style/Widget.AppCompat.DropDownItem.Spinner"/>

        <ImageView
            android:layout_width="@dimen/thirty_dp"
            android:layout_height="@dimen/thirty_dp"
            android:contentDescription="@string/app_name"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/eight_dp"
            android:layout_centerVertical="true"
            android:src="@drawable/bg_spinner" />
    </RelativeLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/one_hundred_dp"
        android:layout_marginTop="@dimen/five_dp"
        android:inputType="textMultiLine"
        android:layout_gravity="start"
        android:gravity="start"
        android:textSize="@dimen/text_dimen_13"
        android:padding="@dimen/five_dp"
        android:fontFamily="@font/roboto_regular"
        android:hint="write your own"
        android:background="@color/colorWhite"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/forty_dp"
        android:layout_marginTop="@dimen/five_dp"
        android:background="@drawable/btn_send_ripple_effect"
        android:text="@string/label_send"
        android:fontFamily="@font/roboto_bold"
        android:textColor="@color/colorWhite" />
</LinearLayout>